<resources>
    <string name="app_name">TriGlobal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="free_leads">Free Leads</string>
    <string name="leads">Leads</string>
    <string name="sirello">Sirello</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="general">General</string>
    <string name="volume_m3">Volume (m3)</string>
    <string name="volume_ft3">Volume (ft3)</string>
    <string name="assembly">Assembly</string>
    <string name="storage">Storage</string>
    <string name="business">Business</string>
    <string name="packing">Packing</string>
    <string name="contact_details">Contact Details</string>
    <string name="company_name">Company Name</string>
    <string name="name">Name</string>
    <string name="telephone_1">Telephone #1</string>
    <string name="telephone_2">Telephone #2</string>
    <string name="email">Email</string>
    <string name="moving_from">Moving From</string>
    <string name="street">Street</string>
    <string name="zipcode">Zipcode</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="moving_to">Moving To</string>
    <string name="name_label">Name</string>
    <string name="moving_date_label">Moving Date</string>
    <string name="contents">Contents</string>
    <string name="leads_error">Unable to load leads, please, check your internet connection</string>
    <string name="buy_free_lead">Buy Free Lead</string>
    <string name="moving_size">Moving Size</string>
    <string name="moving_date">Moving Date</string>
    <string name="cost">Cost</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="time_left">Time Left</string>
    <string name="waiting_for_network">Waiting for network...</string>
    <string name="lead_added_date">Lead Added Date</string>
</resources>
